<resources>
    <string name="app_name">RadioControl</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_network">Network Blocklist Settings</string>
    <string name="title_send_feedback">Send feedback</string>
    <string name="mail_feedback_email">nikhil1.paranjape@gmail.com</string>
    <string name="mail_feedback_subject">RadioControl Feedback</string>
    <string name="mail_feedback_message" />
    <string name="cellNetwork">Cell network detected</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="donate">Donate</string>
    <string name="sendFeedback">Send Feedback</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="noInternet">No Internet Connection</string>
    <string name="noBilling">Billing Error</string>
    <string name="waitRoot">is waiting for root</string>
    <string name="noRoot">couldn\'t get root</string>
    <string name="rEnabled">is Enabled</string>
    <string name="rDisabled">is Disabled</string>
    <string name="donationThanks">Thanks for the donation :)</string>
    <string name="donationCancel">Donation cancelled</string>
    <string name="donationExists">You already donated</string>
    <string name="connectedWifi">Connected to the internet through WIFI</string>
    <string name="connectedFCell">Connected to the internet through FAST CELL</string>
    <string name="connectedSCell">Connected to the internet through SLOW CELL</string>
    <string name="airplaneOn">Airplane mode is on</string>
    <string name="connectionUnable">Unable to connect to the internet</string>
    <string name="ping">Testing…</string>
    <string name="netSettingsSum">Add networks to this blocklist that aren\'t reliable(this will keep the cellular radios enabled while connected to these networks)</string>
    <string name="resetNetSettings">Reset Network Settings</string>
    <string name="resetSummary">Reset Network Blacklist</string>
    <string name="alertSettings">Alert Settings</string>
    <string name="enableAlert">Internet Test (Experimental)</string>
    <string name="alertSum">Shows a notification when the connected WiFi network is not connected to the internet</string>
    <string name="notificationSettings">Notification Settings</string>
    <string name="logging_settings">Logging Settings</string>
    <string name="enable_logging">Enable Logging</string>
    <string name="log_summary">This will log all WiFi switching actions and place it into a LOCAL-ONLY text file</string>
    <string name="changelog">Changelog</string>
    <string name="changelog_summary">View the current changelog</string>
    <string name="radiocontrol_version">RadioControl version</string>
    <string name="support_website">Support Website</string>
    <string name="help_wiki">Help Wiki</string>
    <string name="dev_deactivated">Developer features deactivated</string>
    <string name="dev_activated">Enabled developer features</string>
    <string name="dev_bypass">Developer Bypass</string>
    <string name="reset_ssid">SSID list reset</string>
    <string name="open_source_title">Open source software licenses</string>
    <string name="open_source_summary">Details about open source licenses</string>
    <string name="not_connected_alert">You are not connected to the internet</string>
    <string name="stats">Statistics (Beta)</string>
    <string name="tutorial_summary">View the app\'s tutorial screen</string>
    <string name="tutorial_title">Tutorial</string>
    <string name="network_alert">Network Connectivity Checker (Experimental)</string>
    <string name="welcome_to_radiocontrol">Welcome to RadioControl</string>
    <string name="intro_summary_1">This app saves your battery by switching off the cellular radios when connected to a WiFi network</string>
    <string name="wifi_signal_lost">WiFi Signal Lost</string>
    <string name="animation_text_box">Animation</string>
    <string name="gridline_text_box">Gridlines</string>
    <string name="title_do_not_disturb">Do Not Disturb</string>
    <string name="title_night_mode_experimental">Night Mode (Experimental)</string>
    <string name="summary_do_not_disturb">This will disable the service for a custom amount of hours if you are going on an airplane</string>
    <string name="summary_night_mode">Night mode can be used to disable the airplane service at a specified time frame</string>
    <string name="title_airplane_service_toggle">Keep-Alive Service</string>
    <string name="summary_airplane_service">Periodically awakens app to ensure full functionality</string>
    <string name="title_service_settings">Service Settings</string>
    <string name="summary_service_settings">Run the service every interval specified</string>
    <string name="title_root_command_alt">Toggle Cellular mode (Experimental)</string>
    <string name="summary_root_command_alt">This uses a command to toggle the cellular radio. Use this if you are having problems with bluetooth disconnects, or regularly use airplane mode.</string>
    <string name="summaryAirplaneReset">Use this if you are having issues with normal airplane mode operation</string>
    <string name="resetAirplaneSettings">Reset Airplane Mode</string>
    <string name="LogTitle">Log Directory</string>
    <string name="LogDirSummary">Change where logs are saved</string>
    <string name="prefs_summary_phone_call">Automatically enables the cellular radios whenever there is an active phone call.</string>
    <string name="prefs_phone_check">Call Handling (Beta)</string>
    <string name="prefs_title_phone_settings">Phone Settings</string>
    <string name="prefs_title_batOptim">Optimizations</string>
    <string name="title_battery_optimization">Background Optimization</string>
    <string name="summary_battery_optimization">This will run the current service on the background, as opposed to the UI thread.</string>
    <string name="title_analytics_service">Third Party Services</string>
    <string name="standby_drawer_name">Standby Mode</string>
    <string name="permissionSample">Standby mode disables all <b>RadioControl</b> services (Useful for airplanes) This can be disabled from notifications</string>
    <string name="permissionSampleFabric">Allow <b>RadioControl</b> to send crash and error reports to Fabric Crashlytics</string>
    <string name="summary_delete_log">Also delete existing <b>RadioControl</b> logs?</string>
    <string name="showDisabled">is Disabled</string>
    <string name="showEnabled">is Enabled</string>
    <string name="showEnabledDebug">is Enabled(DEBUG)</string>
    <string name="not_set">not set</string>
    <string name="title_fabric_analytics">Fabric Crash reporting</string>
    <string name="summary_fabric_analytics">Crashes and error reporting. Nothing personally identifiable or unrelated to RadioControl</string>
    <string name="title_doze_optimization">Android Battery Optimization</string>
    <string name="drawer_string_troubleshooting">Troubleshooting (Beta)</string>
    <string name="permissionIntelligent">This works better with Background Optimization. Should I turn it on for you?</string>
    <string name="title_intelligent_mode">Intelligent Mode (Beta)</string>
    <string name="summary_intelligent_mode">A high priority detection method that fixes issues on Nougat or newer(7.0+)</string>
    <string name="persistence_description">Keeps the persistence service awake</string>
    <string name="summary_airplane_service_notification">Notifies when the airplane service is running</string>
    <string name="radios_toggled_graph_title">Radios toggled</string>
    <string name="statistics_title_slide">Statistics (Experimental)</string>
    <string name="statistics_description_slide">Shows you statistics about the app service. Requires logging to be enabled in settings</string>
    <string name="animation_duration_sheet_text">Animation Duration</string>
    <string name="title_activity_troubleshooting">TroubleshootingActivity</string>
    <string name="profile_root_status">Root Status</string>
    <string name="title_service_paused">RadioControl services have been paused</string>
    <string name="title_standby_dialog">Standby Mode</string>
    <string name="button_disable_standby">Turn OFF standby mode</string>
    <string name="text_not_set">not set</string>
    <string name="title_whats_new">RadioControl has been updated</string>
    <string name="text_got_it">GOT IT</string>
    <string name="text_whats_new">WHAT\'S NEW</string>
    <string name="title_airplane_reset">Please disable WiFi and Airplane mode first, and make sure the cellular radios are enabled before continuing</string>
    <string name="text_ok">OK</string>
    <string name="text_set_for_hours">set for %1$d hour(s)</string>
    <string name="text_cancel">Cancel</string>
    <string name="title_easing_animation">Easing Animation</string>
    <string name="title_animation_duration">Animation Duration</string>
    <string name="button_text_choose">Choose</string>
    <string name="button_text_allow">Allow</string>
    <string name="button_text_deny">Deny</string>
    <string name="title_gridlines">Gridlines</string>
    <string name="preference_gridlines">gridlines</string>
    <string name="error_count_return_null">Counting returned null</string>
    <string name="preference_work_mode" translatable="false">workMode</string>
    <string name="preference_is_donated" translatable="false">isDonated</string>
    <string name="preference_allow_fabric" translatable="false">allowFabric</string>
    <string name="preference_is_developer" translatable="false">isDeveloper</string>
    <string name="preference_app_active" translatable="false">isActive</string>
    <string name="preference_first_start" translatable="false">firstStart</string>
    <string name="preference_airplane_service" translatable="false">isAirplaneService</string>
    <string name="preference_standby_dialog" translatable="false">isStandbyDialog</string>
    <string name="title_allow_fabric">Allow Fabric Crashlytics</string>
    <string name="title_delete_logs">Delete Logs</string>
    <string name="title_preference_instabug">Instabug In-app Feedback (Disabled)</string>
    <string name="summary_preference_instabug">Instabug is providing in-app feedback and bug reporting to mobile apps. It provides a seamless way for two-way communication with users, while providing detailed environment report for developers. Shake to activate</string>
    <string name="pref_instabug_check" translatable="false">instabugCheck</string>
    <string name="log_persistence_created" translatable="false">PERSISTENCE Created</string>
    <string name="log_persistence_started" translatable="false">PERSISTENCE Started</string>
    <string name="log_persistence_bound" translatable="false">PERSISTENCE Bound</string>
    <string name="link_speed_24">Link speed: %1$d Mbps @ 2.4 GHz</string>
    <string name="link_speed_5">Link speed: %1$d Mbps @ 5 GHz</string>
    <string name="intro_description_magisk">This app uses Root to run low level commands. They are only to change the state of Airplane mode, Bluetooth, Cellular radios, and WiFi</string>
    <string name="intro_description_intelligent_mode">A notification allowing the app to continue working in the background. This is enabled by default on Android Nougat+ but can be disabled in settings</string>
    <string name="text_activity_hours">Hours</string>
    <string name="text_activity_set">Set</string>
    <string name="text_activity_cancel">Cancel</string>
    <string name="text_activity_do_not_disturb_is">Do Not Disturb is</string>
    <string name="text_activity_set_for_x_hours">set for X hours</string>
</resources>