<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nikhilparanjape.radiocontrol.activities.DoNotDisturbActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_activity_hours"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <com.appyvet.rangebar.RangeBar
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:id="@+id/rangebar"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        custom:tickEnd="24"
        custom:rangeBar="false"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_activity_set"
        android:id="@+id/set_button"
        android:layout_below="@+id/rangebar"
        android:layout_alignParentEnd="true"
        android:theme="@style/FlatButton"
        style="@style/Widget.AppCompat.Button.Borderless"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_activity_cancel"
        android:id="@+id/cancel_button"
        android:layout_below="@+id/set_button"
        android:layout_alignParentEnd="true"
        android:theme="@style/FlatButton"
        style="@style/Widget.AppCompat.Button.Borderless"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:layout_alignBottom="@+id/dnd_status"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/dnd_status"
        android:text="@string/text_activity_do_not_disturb_is"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/hour_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView5"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/textView5"
        android:paddingStart="3dp"
        android:text="@string/text_activity_set_for_x_hours"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/dnd_status"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="510dp"
        app:srcCompat="@drawable/ic_do_not_disturb_off_white_48px" />

</RelativeLayout>
